[package]
name = "dbms_grpc"
version = "0.1.0"
edition = "2021"



[dependencies]
tonic = "0.12.3"
prost = "0.13.3"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
rand = "0.8"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
async-stream = "0.3.6"
tokio-stream = "0.1.16"
dashmap = "6.1.0"


[build-dependencies]
tonic-build = "0.12.3"